--- a/Javajam8/menu.html
+++ b/Javajam8/menu.html
@@ -31,15 +31,15 @@
       <div id="flow">
         <Table>
           <tr>
-            <td><strong>Just Java</strong></td>
+            <th>Just Java</th>
             <td>Regular house blend, decaffeinated coffee, or flavor of the day.<br>Endless Cup $3.50</td>
           </tr>
           <tr>
-            <td><strong>Cafe au Lait</strong></td>
+            <th>Cafe au Lait</th>
             <td>House blended coffee infused into a smooth, steamed milk.<br>Single $4.00 Double $5.00</td>
           </tr>
           <tr>
-            <td><strong>Iced Cappuccino</strong></td>
+            <th>Iced Cappuccino</th>
             <td>Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br>Single $5.00 Double
               $6.50
             </td>
