updated footer across both projects to reflect correct email

--- a/Javajam8/menu.html
+++ b/Javajam8/menu.html
@@ -49,7 +49,7 @@
     </main>
     <footer>
       Copyright &copy; 2020 JavaJam Coffee Bar<br>
-      <a href="mailto:yourfirstname@yourlastname.com">yourfirstname@yourlastname.com</a>
+      <a href="mailto:will@gordon.com">will@gordon.com</a>
     </footer>
   </div>
 </body>
