--- a/fishcreek8/services.html
+++ b/fishcreek8/services.html
@@ -52,7 +52,7 @@
     </main>
     <footer>
       Copyright &copy; 2020 Fish Creek Animal Clinic<br>
-      <a href="mailto:yourfirstname@yourlastname.com">yourfirstname@yourlastname.com</a>
+      <a href="mailto:will@gordon.com">will@gordon.com</a>
     </footer>
   </div>
 </body>
