--- a/fishcreek11/askvet.html
+++ b/fishcreek11/askvet.html
@@ -24,14 +24,24 @@
     <main>
       <h2>Ask the Vet</h2>
       <p>Contact us if you have a question that you would like answered here.</p>
+
       <div id="flow">
-        <dl>
-          <dt>Our dog, Sparky, likes to eat whatever the kids are snacking on. Is it OK for the dog to each chocolate?
-          </dt>
-          <dd>Chocolate is toxic to dogs. Please do not feed your dog chocolate. Try
-            playing a game with your children &mdash; when you feed them people treats, they
-            can feed Sparky dog treats.</dd>
-        </dl>
+        <article>
+          <dl>
+            <dt>Our dog, Sparky, likes to eat whatever the kids are snacking on. Is it OK for the dog to each chocolate?
+            </dt>
+            <dd>Chocolate is toxic to dogs. Please do not feed your dog chocolate. Try
+              playing a game with your children &mdash; when you feed them people treats, they
+              can feed Sparky dog treats.</dd>
+          </dl>
+          <h3>Sparky Speaks!</h3>
+          <audio controls="controls">
+            <source src="sparky.mp3" type="audio/mpeg">
+            <source src="sparky.ogg" type="audio/ogg">
+            <a href="sparky.mp3"></a>
+          </audio>
+        </article>
+
         <img src="dog.gif" alt="friendly dog" height="300" width="317">
       </div>
     </main>
