finished chapter 12 for FishCreek Animal Clinic. Added ecommerce shop.html page. Almost done with course in 2 days.

--- a/fishcreek12/contact.html
+++ b/fishcreek12/contact.html
@@ -19,6 +19,7 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="askvet.html">Ask the Vet</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="shop.html">Shop</a></li>
             </ul>
         </nav>
         <main>
