forgot to add shop.html

--- a/fishcreek12/shop.html
+++ b/fishcreek12/shop.html
@@ -19,7 +19,7 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="askvet.html">Ask the Vet</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="shopt.html">Shop</a></li>
+                <li><a href="shop.html">Shop</a></li>
             </ul>
         </nav>
         <main>
@@ -31,7 +31,7 @@
                     <img src="fishtote.gif" alt="Tote bag">
                     <p>Carry your pet supplies and accessories in a special tote from Fish Creek. 100% cotton. $14.95
                     </p>
-                    <form method="post" action="https://webdevbasics.net/cart.html">
+                    <form method="POST" action="https://webdevbasics.net/cart.html">
                         <input type="submit" value="Add to Cart">
                     </form>
                 </section>
@@ -40,7 +40,7 @@
                     <img src="fishsweat.gif" alt="sweatshirt">
                     <p>A Fish Creek sweatshirt will warm you up on cool morning walks with your pet. 100% cotton. Size
                         XL. $29.95</p>
-                    <form method="post" action="https://webdevbasics.net/cart.html">
+                    <form method="POST" action="https://webdevbasics.net/cart.html">
                         <input type="submit" value="Add to Cart">
                     </form>
                 </section>
