updated JS for chapter 14 FishCreek. Too easy. Only the final project left

--- a/fishcreek14/askvet.html
+++ b/fishcreek14/askvet.html
@@ -8,7 +8,7 @@
   <link href="fishcreek.css" rel="stylesheet">
 </head>
 
-<body>
+<body onload="alert('Send in your question to Ask the Vet and receive a 10% discount');">
   <div id="wrapper">
     <header>
       <h1><a href="index.html">Fish Creek Animal Clinic</a></h1>
