--- a/fishcreek14/index.html
+++ b/fishcreek14/index.html
@@ -51,6 +51,11 @@
     <footer>
       Copyright &copy; 2020 Fish Creek Animal Clinic<br>
       <a href="mailto:will@gordon.com">will@gordon.com</a>
+      <div>
+        <h4>This page was last modified on:
+          <script>document.write(document.lastModified);</script>
+        </h4>
+      </div>
     </footer>
   </div>
 </body>
