was messing around last week and made the final project site just going over the instructions line by line, if I have time I will redo the site

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </ul>
     <h3>Chapter 10</h3>
     <ul>
-        <li><a href="chap10/host.html">Chapter 10 - Hosting Web Sites</a></li>
+        <li><a href="chap10/index.html">Chapter 10 - Hosting Web Sites</a></li>
     </ul>
     <h3>Chapter 11</h3>
     <ul>
