this may have to do, oh well. time crunch. final meets all the criteria although looks bad

--- a/final/music.html
+++ b/final/music.html
@@ -15,11 +15,11 @@
         <a href="index.html"><img src="spicelog.png" alt="spicegirls logo" id="logo"></a>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="twentfive.html">25 Year Anniversary</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="music.html">Music</a></li>
             <li><a href="links.html">Links</a></li>
-            <li><a href="index.html#contact-form">Contact</a></li>
+            <li><a href="./index.html#contact-form">Contact</a></li>
         </ul>
     </nav>
     <main>
