--- a/final/twentfive.html
+++ b/final/twentfive.html
@@ -23,23 +23,23 @@
         </ul>
     </nav>
     <main>
-        <h1>Links</h1>
-        <h2>We're sad to see you go</h2>
-        <div class="monkey">
-            <div class="emoji closed active">😢</div>
-            <div class="emoji open">😭</div>
-            <script src="app.js"></script>
+        <h1>25 Year Reunion!</h1>
+        <h2>They're back!</h2>
+        <div class="twofive">
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Release day is here! <a
+                        href="https://twitter.com/hashtag/Spice25?src=hash&amp;ref_src=twsrc%5Etfw">#Spice25</a> is out
+                    now. A celebration of our debut album ‘Spice’. We had such a great time listening to the old demos
+                    and putting this together. We hope it brings back some amazing memories for you, just as it did for
+                    us 💞 <a href="https://t.co/6A1C9xXLMq">https://t.co/6A1C9xXLMq</a> <a
+                        href="https://t.co/jPqJtflVv4">pic.twitter.com/jPqJtflVv4</a></p>&mdash; Spice Girls
+                (@spicegirls) <a
+                    href="https://twitter.com/spicegirls/status/1454002567185272838?ref_src=twsrc%5Etfw">October 29,
+                    2021</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
-        <p id="pMonkey">(click the emoji)</p>
-        <iframe src="https://giphy.com/embed/SbpAiUCA70V6DB5yJh" width="480" height="258" frameBorder="0"
-            class="giphy-embed" allowFullScreen></iframe>
-        <p><a href="https://giphy.com/gifs/girl-power-spice-girls-up-your-life-SbpAiUCA70V6DB5yJh">via GIPHY</a></p>
 
-        <p id="pMonkey"><a href="https://www.thespicegirls.com/" target="_blank">Official Spice Girls Website</a></p>
-        <p id="pMonkey"><a href="https://en.wikipedia.org/wiki/Spice_Girls_discography" target="_blank">Wikipedia</a>
-        </p>
-        <p id="pMonkey"><a href="https://open.spotify.com/artist/0uq5PttqEjj3IH1bzwcrXF" target="_blank">Spotify
-                Page</a></p>
 
     </main>
     <footer>
