--- a/final/about.html
+++ b/final/about.html
@@ -15,38 +15,25 @@
         <a href="index.html"><img src="spicelog.png" alt="spicegirls logo" id="logo"></a>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="twentfive.html">25 Year Anniversary</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="music.html">Music</a></li>
             <li><a href="links.html">Links</a></li>
-            <li><a href="index.html#contact-form">Contact</a></li>
+            <li><a href="./index.html#contact-form">Contact</a></li>
         </ul>
     </nav>
     <main>
-        <h1>About</h1>
+        <h1>Spice Girls</h1>
         <div class="every">
 
             <section id="introduction" class="main-section">
 
-                <header>Introduction</header>
+                <header>Origins</header>
 
-                <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight
-                    language. Inside a host environment (for example, a web browser), JavaScript can be connected to
-                    the objects of its environment to provide programmatic control over them. </p>
-                <p>JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set
-                    of language elements such as operators, control structures, and statements. Core JavaScript can
-                    be extended for a variety of purposes by supplementing it with additional objects; for example:
-                </p>
-                <ul>
-                    <li>Client-side JavaScript extends the core language by supplying objects to control a browser
-                        and its Document Object Model (DOM). For example, client-side extensions allow an
-                        application to place elements on an HTML form and respond to user events such as mouse
-                        clicks, form input, and page navigation. </li>
-                    <li>Server-side JavaScript extends the core language by supplying objects relevant to running
-                        JavaScript on a server. For example, server-side extensions allow an application to
-                        communicate with a database, provide continuity of information from one invocation to
-                        another of the application, or perform file manipulations on a server. </li>
-                </ul>
+                <p>The Spice Girls consist of Melanie Brown, Melanie Chisholm, Emma Bunton, Geri Healliwell and Victoria
+                    Beckham</p>
+                <p>They met in 1994, in London, England.</p>
+
 
             </section>
 
@@ -56,12 +43,13 @@
 
                 <header>What you should already know</header>
 
-                <p>This guide assumes you have the following basic background:</p>
+                <p>TIn October 1997, the Spice Girls released the first single from Spiceworld, "Spice Up Your Life". It
+                    entered the UK Singles Chart at number one, making it the group's fifth consecutive number-one
+                    single. source: Wikipedia</p>
                 <ul>
-                    <li>A general understanding of the Internet and the World Wide Web (WWW). </li>
-                    <li>Good working knowledge of HyperText Markup Language (HTML).</li>
-                    <li>Some programming experience. If you are new to programming, try one of the tutorials linked
-                        on the main page about JavaScript. </li>
+                    <li>Spiceworld woud go on to sell 14 million copies worldwide </li>
+                    <li>Performed in front of Nelson Mandela.</li>
+                    <li>Won multiple music awards.</li>
                 </ul>
 
             </section>
@@ -93,43 +81,7 @@
 
             <hr class="hr">
 
-            <section id="hello_world" class="main-section">
 
-                <header>Hello world</header>
-
-                <p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world"
-                    JavaScript code: </p>
-
-                <code>function greetMe(yourName) { alert("Hello " + yourName); }</code>
-                <br>
-                <code>greetMe("World");</code>
-
-                <p>Select the code in the pad and hit Ctrl+R to watch it unfold in your browser! </p>
-
-            </section>
-
-            <hr class="hr">
-
-            <section id="declaring_variables" class="main-section">
-
-                <header>Declaring Variables</header>
-
-                <p>You can declare a variable in three ways:</p>
-
-                <p>With the keyword var. For example,</p>
-                <code>var x = 42.</code>
-                <p>This syntax can be used to declare both local and global variables.</p>
-
-                <p>By simply assigning it a value. For example,</p>
-                <code>x = 42.</code>
-                <code>This always declares a global variable. It generates a strict JavaScript warning. You shouldn't use this variant.</code>
-
-                <p>With the keyword let. For example,</p>
-                <code>let y = 13.</code>
-                <p>This syntax can be used to declare a block scope local variable. See Variable scope below.</p>
-
-
-            </section>
         </div>
 
 
