--- a/final/index.html
+++ b/final/index.html
@@ -15,7 +15,7 @@
         <a href="index.html"><img src="spicelog.png" alt="spicegirls logo" id="logo"></a>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">25 Year Anniversary</a></li>
+            <li><a href="twentfive.html">25 Year Anniversary</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="music.html">Music</a></li>
             <li><a href="links.html">Links</a></li>
