does this work now, folder names

--- a/Javajam12/index.html
+++ b/Javajam12/index.html
@@ -47,7 +47,7 @@
       </div>
     </main>
     <footer>
-      Copyright &copy; 2020 JavaJam Coffee Bar<br>
+      Copyright &copy; 2020 JavaJam Coffee Bar!<br>
       <a href="mailto:will@gordon.com">will@gordon.com</a>
     </footer>
   </div>
