--- a/Javajam14/index.html
+++ b/Javajam14/index.html
@@ -47,7 +47,7 @@
       </div>
     </main>
     <footer>
-      Copyright &copy; 2020 JavaJam Coffee Bar<br>
+      Copyright &copy; 2020 JavaJam Coffee Bar!<br>
       <a href="mailto:will@gordon.com">will@gordon.com</a>
       <h3>This page was last modified on:
         <script>document.write(document.lastModified);</script>
