updated index to reflect folder names

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <h3><a href="mailto:wcgordon1@gmail.com">Click to send email to Will Gordon</a></h3>
     <h3>Chapter 8</h3>
     <ul>
-        <li><a href="javajam8/index.html">JavaJam Coffee House - Chapter 8</a></li>
+        <li><a href="Javajam8/index.html">JavaJam Coffee House - Chapter 8</a></li>
         <li><a href="fishcreek8/index.html">Fish Creek Animal Hospital - Chapter 8</a> </li>
     </ul>
     <h3>Chapter 9</h3>
     <ul>
-        <li><a href="javajam9/index.html">JavaJam Coffee House - Chapter 9</a></li>
+        <li><a href="Javajam9/index.html">JavaJam Coffee House - Chapter 9</a></li>
         <li><a href="fishcreek9/index.html">Fish Creek Animal Hospital - Chapter 9 </a></li>
     </ul>
     <h3>Chapter 10</h3>
@@ -25,17 +25,17 @@
     </ul>
     <h3>Chapter 11</h3>
     <ul>
-        <li><a href="javajam11/index.html">JavaJam Coffee House - Chapter 11</a></li>
+        <li><a href="Javajam11/index.html">JavaJam Coffee House - Chapter 11</a></li>
         <li><a href="fishcreek11/index.html">Fish Creek Animal Hospital - Chapter 11</a></li>
     </ul>
     <h3>Chapter 12</h3>
     <ul>
-        <li><a href="javajam12/index.html">JavaJam Coffee House - Chapter 12</a></li>
+        <li><a href="Javajam12/index.html">JavaJam Coffee House - Chapter 12</a></li>
         <li><a href="fishcreek12/index.html">Fish Creek Animal Hospital - Chapter 12</a></li>
     </ul>
     <h3>Chapter 14</h3>
     <ul>
-        <li><a href="javajam14/index.html">JavaJam Coffee House - Chapter 14</a></li>
+        <li><a href="Javajam14/index.html">JavaJam Coffee House - Chapter 14</a></li>
         <li><a href="fishcreek14/index.html">Fish Creek Animal Hospital - Chapter 14</a></li>
     </ul>
     <h3><a href="final/index.html">Final Exam Website</a> </h3>
